Add some more information like resume(TBD), linkedin, and projects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#">Contact Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Resume</a>
+                <a class="nav-link" href="./assets/img/Resume_TBD.pdf">Resume</a>
               </li>
             </ul>
           </div>
@@ -94,26 +94,26 @@
                   </div>
                   <div class="part-image-size">
                       <div class="background" style="background-image: url('./assets/img/img3.jpg')"></div>
-                      <a class="glass" href="https://hengyu89.github.io/UCSD_HW2_Portfolio/"></a>
+                      <a class="glass" href="https://hengyu89.github.io/UCSD_HW6_Weather-Dashboard/"></a>
                       <figcaption class="little-tag">
-                          <h3>TBD</h3>
-                          <p>Waiting for more milestones.</p>
+                          <h3>Weather Dashboard</h3>
+                          <p>Tools to search cities' weather.</p>
                       </figcaption>
                   </div>
                   <div class="part-image-size">
                       <div class="background" style="background-image: url('./assets/img/img4.jpg')"></div>
-                      <a class="glass" href="https://hengyu89.github.io/UCSD_HW2_Portfolio/"></a>
+                      <a class="glass" href="https://responsibleparty.github.io/Group-Project-I/"></a>
                       <figcaption class="little-tag">
-                          <h3>TBD</h3>
-                          <p>Waiting for more milestones.</p>
+                          <h3>Food/Recipe Searching Engine</h3>
+                          <p>An engine friend for traveler to search favorite foods.</p>
                       </figcaption>
                   </div>
                   <div class="part-image-size">
                       <div class="background" style="background-image: url('./assets/img/img5.jpg')"></div>
-                      <a class="glass" href="https://hengyu89.github.io/UCSD_HW2_Portfolio/"></a>
+                      <a class="glass" href="https://hengyu89.github.io/UCSD_HW4_Code-Quiz/"></a>
                       <figcaption class="little-tag">
-                          <h3>TBD</h3>
-                          <p>Waiting for more milestones.</p>
+                          <h3>Multiple Choice Quiz</h3>
+                          <p>A model for multiple choice quiz.</p>
                       </figcaption>
                   </div>
               </figure>
@@ -129,10 +129,10 @@
   
           <article class="right-side">
               <ul>
-                  <li><a href="https://hengyu89.github.io/UCSD_HW2_Portfolio/" target="_blank"><span contact-phone="Waiting for your call :)">818.***.7013</span></a></li>
-                  <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">heng.yu***@gmail.com</a></li>
-                  <li><a href="https://github.com/" target="_blank">GitHub</a></li>
-                  <li><a href="https://twitter.com/home" target="_blank">Twitter</a></li>
+                  <li><a href="https://hengyu89.github.io/UCSD_HW2_Portfolio/" target="_blank"><span contact-phone="Waiting for your call :)">818.629.7013</span></a></li>
+                  <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">heng.yu161@gmail.com</a></li>
+                  <li><a href="https://github.com/hengyu89?tab=repositories" target="_blank">GitHub</a></li>
+                  <li><a href="https://www.linkedin.com/in/heng-yu-87409b1aa/" target="_blank">Linkedin</a></li>
                   <li><a href="https://open.spotify.com/" target="_blank">Spotify</a></li>
               </ul>
           </article>
