--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!-- Plug all images into the "Work" area -->
           <article class="right-side">
               <figure class="figure-frame">
-                  <img class="full-image" src="./assets/img/img1.jpg" alt="Aloha"/>
+                  <img class="full-image" src="./assets/img/img1_h.jpg" alt="Aloha"/>
                   <a class="full-glass" href="https://hengyu89.github.io/Coin-Flipper/" target="_blank"></a>
                   <figcaption class="little-tag">
                       <h3>Roll the dice</h3>
@@ -101,7 +101,7 @@
                       </figcaption>
                   </div>
                   <div class="part-image-size">
-                      <div class="background" style="background-image: url('./assets/img/img4.jpg')"></div>
+                      <div class="background" style="background-image: url('./assets/img/img4_h.jpg')"></div>
                       <a class="glass" href="https://responsibleparty.github.io/Group-Project-I/"></a>
                       <figcaption class="little-tag">
                           <h3>Food/Recipe Searching Engine</h3>
